<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="Location">
        <EditTextPreference
            android:title="@string/pref_location_label"
            android:key="@string/pref_location_key"
            android:defaultValue="@string/pref_location_default"
            android:inputType="text"
            android:singleLine="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Units of Measurement">
        <ListPreference
            android:title="@string/pref_units_label"
            android:key="@string/pref_units_key"
            android:defaultValue="@string/pref_units_metric_default"
            android:entries="@array/pref_units_array"
            android:entryValues="@array/pref_units_values"/>
    </PreferenceCategory>
</PreferenceScreen>